Agrego boton de ver mas a las tarjetas de nuevo y ademas arreglo el diseño de las imágenes de las tarjetas

--- a/index.html
+++ b/index.html
@@ -255,6 +255,9 @@
                   interactivas de manera eficiente.
                 </p>
               </div>
+              <div class="card-footer d-grid">
+                <button class="btn btn-warning">Ver más</button>
+              </div>
             </div>
           </div>
 
@@ -276,6 +279,9 @@
                   desarrollar tus propios proyectos.
                 </p>
               </div>
+              <div class="card-footer d-grid">
+                <button class="btn btn-warning">Ver más</button>
+              </div>
             </div>
           </div>
           <div class="col">
@@ -296,6 +302,9 @@
                   proyectos dinámicos y profesionales.
                 </p>
               </div>
+              <div class="card-footer d-grid">
+                <button class="btn btn-warning">Ver más</button>
+              </div>
             </div>
           </div>
           <div class="col">
@@ -315,6 +324,9 @@
                   guiaremos paso a paso para desarrollar aplicaciones backend
                   modernas y eficientes.
                 </p>
+              </div>
+              <div class="card-footer d-grid">
+                <button class="btn btn-warning">Ver más</button>
               </div>
             </div>
           </div>
