Diseño formulario tamaño mediano

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         </div>
 
         <form class="row pb-3">
-          <div class="col-12">
+          <div class="col-12 col-md-6">
             <div class="mb-3">
               <label for="nombre">Nombre completo</label>
               <span class="text-danger fw-bold fs-3">*</span>
@@ -343,7 +343,7 @@
               />
             </div>
           </div>
-          <div class="col-12">
+          <div class="col-12 col-md-6">
             <div class="mb-3">
               <label for="correo">Correo electrónico</label>
               <span class="text-danger fw-bold fs-3">*</span>
@@ -372,7 +372,7 @@
               ></textarea>
             </div>
           </div>
-          <div class="col-12 d-grid">
+          <div class="col-12 d-grid d-md-flex justify-content-end">
             <button class="btn btn-outline-dark">
               <i class="bi bi-envelope"></i> Enviar
             </button>
